--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 14px;
+}
+
 body {
     background-image: url(pics/bg-body.jpg);
+}
+
+#container {
+    max-width: 1000px;
+    
+}
+
+#header {
+    background-image: url(pics/bg-header.jpg);
+    height: 300px;
 }
