--- a/style.css
+++ b/style.css
@@ -30,3 +30,9 @@ body {
     padding-left: 60px;
     padding-top: 80px;
 }
+
+#nav {
+    background-color: ;
+    width: 200px;
+    height: 1000px;
+}
